--- a/demo/index.html
+++ b/demo/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first webpage</title>
+    <title>Faozee's World</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hey Welcome to Faozee's World of Fun</h1>
 </body>
 </html>
