--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,5 +9,18 @@
     <header>
         <h1> Faoziyyah Busari</h1>
     </header>
+    <main>
+        <article>
+            <h2>About Me</h2>
+            <p>I am a dedicated student at <abbr title= Algonquin College>AC</abbr>, who has a deep passion for stories. Whether found within the pages of a novel or shared among friends and family, I love experiencing them. Reading has not only expanded my imagination but also my <em>empathy</em>, which has opened my eyes to the diverse tapestry of human experiences. The immersive world of web and graphic design fascinates me, and I am committed to mastering the art of crafting compelling digital experiences.</p>
+            <p>During my leisure time, I often enjoy spending time with my loved ones or getting lost in an intriguing novel. Every story, whether it's experienced in real life or read in a book, helps me gain a deeper understanding of the world. I'm fascinated by the potential of Interactive Media Design and its ability to create engaging narratives. To contribute meaningfully to this dynamic field, I'm constantly improving my skills as a designer. With each step forward in my education, I'm getting closer to my goal of becoming a versatile designer who can bring stories to life through interactive digital solutions.</p>
+        </article>
+        <blockquote>
+            <p>"The future belongs to those who believe in the beauty of their dreams." <sup>— Eleanor Roosevelt</sup></p>
+        </blockquote>
+    </main>
+    <footer>
+        <p>&copy; 2024 Faoziyyah. All rights reserved.</p>
+    </footer>
 </body>
 </html>
