--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -31,6 +31,8 @@
                 <li> Cooking</li>
                 <li> Listening to Music</li>
                 <li> Travelling</li>
+                <li> Hiking</li>
+                <li> Watching Movies</li>
             </ul>
         </section>
     </main>
