Update html tags

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -22,8 +22,9 @@
                 <code>&lt;blockquote&gt;</code> - Specifies a section that is quoted from another source, often used for citations.
             </li>
             <li>
-                <code>&lt;cite&gt;</code> - Defines the title of a creative work, indicating it as a citation within text.
+                <code>&lt;footer&gt;</code> - Defines the footer for a document or a section and typically contains authorship information, copyright notices, links to privacy policies, credits, contact information, or other important links that are relevant to the overall document.
             </li>
+            
             <li>
                 <code>&lt;em&gt;</code> - Emphasizes text, usually italicizing it, which can convey a different tone or level of importance.
             </li>
