Implement feedback from previous assignment, create CSS file, and apply styling adjustments

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -33,6 +33,7 @@
                 <li> Listening to Music</li>
                 <li> Travelling</li>
                 <li> Watching Movies</li>
+                <li> Hiking</li>
             </ul>
         </section>
     </main>
