update css code

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -25,7 +25,7 @@
         <article id="story" class="clearfix">
             <h2><strong>Embrace the Calm</strong></h2>
             <img src="images/beach.jpeg" alt="Serenity Shores" class="article-image">
-            <p>At Serenity Shores, we believe in the power of nature to restore balance to our busy lives. Our beach is a haven where the horizon stretches infinitely, and the only deadlines are the tides. Here, you can walk along the shore, your thoughts mingling with the rhythmic waves, and find a peace that city life cannot offerAt Serenity Shores, we believe in the power of nature to restore balance to our busy lives. Our beach is a haven where the horizon stretches infinitely, and the only deadlines are the tides.</p>
+            <p>At Serenity Shores, we're not just a destination; we're a sanctuary where the seamless horizon meets the infinite sky, creating a symphony of nature's tranquility.Nestled along the pristine coastline, our beach serves as a peaceful retreat from the hustle and bustle of daily life, inviting you to immerse yourself in the serenity of the sea.Our shores are graced with the gentle whispers of waves, crafting melodies that soothe the soul and mend the spirit. Here, time slows, allowing moments of reflection, relaxation, and rejuvenation. The soft, golden sands beneath your feet, the salt-kissed air filling your lungs, and the warmth of the sun on your skin harmonize to create an ambiance of pure bliss.Serenity Shores is more than just a slice of paradise; it's a community deeply committed to the preservation of nature's beauty and the well-being of our planet. </p>
         </article>
     
         <!-- Facts section using list -->
@@ -35,6 +35,9 @@
                 <li>Serenity Shores is home to a diverse ecosystem, including playful dolphins and majestic sea turtles.</li>
                 <li>Our community is dedicated to sustainability, ensuring that the beauty of the beach is preserved for generations.</li>
                 <li>The beach is known for its spectacular sunsets, which paint the sky in a palette of extraordinary colors every evening.</li>
+                <li>Eco-Friendly Initiatives: At the forefront of eco-conscious living, Serenity Shores actively participates in beach clean-ups and coral reef restoration, contributing to the preservation and enhancement of our natural environment.</li>
+                <li>Community and Wellness Programs: Serenity Shores offers wellness programs that foster community and personal well-being, including sunrise yoga and guided meditation, connecting guests with nature and each other.</li>
+            </ul>
             </ul>
         </section>
     
