--- a/midterm/index.html
+++ b/midterm/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-container">
     <header>
-        <img src="images/beach.jpeg" alt="Header Image">
+        <img src="images/beach-wide.jpg" alt="Header Image">
         <h1>Serenity Shores</h1>
     </header>
         <nav>
@@ -24,7 +24,7 @@
         <!-- Article section with text wrapping around an image -->
         <article id="story" class="clearfix">
             <h2><strong>Embrace the Calm</strong></h2>
-            <img src="images/beach.jpeg" alt="Serenity Shores" class="article-image">
+            <img src="images/beach.jpg" alt="Serenity Shores" class="article-image">
             <p>At Serenity Shores, we're not just a destination; we're a sanctuary where the seamless horizon meets the infinite sky, creating a symphony of nature's tranquility.Nestled along the pristine coastline, our beach serves as a peaceful retreat from the hustle and bustle of daily life, inviting you to immerse yourself in the serenity of the sea.Our shores are graced with the gentle whispers of waves, crafting melodies that soothe the soul and mend the spirit. Here, time slows, allowing moments of reflection, relaxation, and rejuvenation. The soft, golden sands beneath your feet, the salt-kissed air filling your lungs, and the warmth of the sun on your skin harmonize to create an ambiance of pure bliss.Serenity Shores is more than just a slice of paradise; it's a community deeply committed to the preservation of nature's beauty and the well-being of our planet. </p>
         </article>
     
@@ -55,7 +55,7 @@
                 <textarea id="message" name="message" required></textarea>
 
                 <fieldset class="radio-buttons">
-                    <legend>Would you like to visit the starfish?</legend>
+                    <legend>Would you like to visit the Shores?</legend>
                     <label><input type="radio" name="visit" value="yes" required> Yes</label>
                     <label><input type="radio" name="visit" value="no"> No</label>
                     <label><input type="radio" name="visit" value="maybe"> Maybe</label>
