add font weight to css code

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -97,7 +97,7 @@
                 </fieldset>
 
                 <!-- Button to submit the form -->
-                <button type="submit">Send</button>
+                <button type="submit">SEND</button>
             </form>
         </section>
     </main>
