--- a/final-project/index.html
+++ b/final-project/index.html
@@ -221,7 +221,8 @@
                     </div>
                     <div class="location">
                         <h3>Location</h3>
-                        <iframe src="https://www.google.com/maps/embed?pb=" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe class="gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22431.555641255592!2d-75.7930345256836!3d45.34993349999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20-%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1711556599147!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                     </div>
                 </div>
                 <div class="copyright">
